[#157736988][bug] fix navigation bar responsiveness on small screens

--- a/UI/static/CSS/style.css
+++ b/UI/static/CSS/style.css
@@ -1,17 +1,17 @@
 
 body {
     margin:2px;
-    height:100%;
 }
 /* Navigation bar styling */
 .navbar {
     display:flex;
-    background:#777777;
+    background:#333;
     padding:16px;
-    color:white;
+    color:#ffffff;
     margin-bottom:0px;
 }
 .navbar-brand a {
+    padding:2px 8px;
     color:white;
     font-size: 150%;
 }
@@ -19,27 +19,26 @@ body {
     display:flex;
 }
 .navbar .navbar-link {
-    padding-right: 15px;
+    padding: 2px  8px;
 }
 .navbar .navbar-link :hover {
     color:black;
-    background-color: #e6e1e1;
+    background-color: rgb(153, 151, 151);
 }
+.navbar .navbar-link a {
+    text-decoration: none;
+           }
 .navbar-right {
     margin-left:auto;
 }
 .navbar-right a {
-    color:white;
-    padding: 0 40px;
+    font-size: 100%;
+    color:#ffffff;
+    padding: 10% 40px;
 }
 .navbar-toggle {
     display:none;
 }
-.navbar .navbar-link a {
-    text-decoration: none;
-
-}
-
 
 /* styling for form section */
 .section {
@@ -69,7 +68,7 @@ form {
 form .form-group label {
     /* display:inline-block; */
     margin:5% auto;
-    color: #ccc;
+    color: #cccccc;
     font-size: 250%;
     padding: 20px 20px 20px 0;
 
@@ -83,7 +82,7 @@ form .form-group {
     /* margin-left:30%; */
 }
 button {
-    background-color: rgb(0, 0, 0);
+    background-color: #000000;
     color:#ccc;
     padding:1% 3%;
     border:none;
@@ -93,7 +92,7 @@ button {
     font-size: 120%;
 }
 button :hover {
-    background-color: black;
+    background-color: #000000;
 }
 .section p {
     text-align:center;
@@ -104,26 +103,31 @@ button :hover {
     padding:0.5%;
     margin:0;
     max-height:20%;
-    color:rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
+    color:#ffffff;
+    background-color: #000000;
     text-align:center;
 }
 /* styling for smaller screens */
 @media only screen and (max-width:768px){
-    .navbar-item, .navbar {
-        flex-direction: column;
-        /* justify-content:center; */
-    }
-    .navbar-right{
-        margin-left:0;
-    }
-    /* make the navbar items invisible on smaller screens */
-
-    .navbar-item{
-        display:none;
-    }
     .navbar{
-        justify-content: center;
+    display:block;
+    padding:10px;
+}
+    .navbar-item{
+        margin-top:2%;
+        display:block;
+        padding:2%;
+    }
+    .navbar-link{
+        margin: 2% 5%;
+        text-align: center;
+    }
+    .navbar .navbar-item .nav-link :hover {
+        background-color: #ccc;
+    }
+    .navbar-right a {
+        max-width:100%;
+        padding: 3% 30%;
     }
     .navbar-toggle{
         align-self:flex-end;
